Fix layout bug

--- a/css/airspace.css
+++ b/css/airspace.css
@@ -522,6 +522,7 @@ font header .navbar-default .navbar-nav li a:hover {
   position: absolute;
   top: 50%;
   left: 10%;
+  right: 10%;
   -webkit-transform: translate(0%, 50%);
   -moz-transform: translate(0%, 50%);
   -ms-transform: translate(0%, 50%);
